--- a/assets/styles/custom.css
+++ b/assets/styles/custom.css
@@ -133,7 +133,7 @@
 .package{
   background-color: #17A97C;
   border-radius: 15px;
-  position: absolute;
+  position: inherit;
   z-index: 5;
 }
 
